--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href="scss/main.scss" />
   </head>
   <body>
-    <h1>Hello world</h1>
-
+    <div class="container">
+      <div class="row">
+        <div class="col-esm-6 col-sm-12 col-md-6 col-lg-8">colonne1 A</div>
+      </div>
+    </div>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
