--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,25 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-esm-6 col-sm-12 col-md-6 col-lg-8">colonne1 A</div>
+        <div class="col-12 col-sm-4 col-md-6 col-lg-6 col-xl-6">colonne A</div>
+        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-6">colonne B</div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-6">colonne C</div>
+        <div class="col-12 col-sm-4 col-md-6 col-lg-6 col-xl-6">colonne D</div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">colonne E</div>
+        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">colonne F</div>
+        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">colonne G</div>
+        <div class="col-6 col-sm-3 col-md-3 col-lg-12 col-xl-3">colonne H</div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          colonne I
+        </div>
       </div>
     </div>
     <script src="js/main.js" type="module"></script>
