--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,40 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="scss/main.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-4 col-md-6 col-lg-6 col-xl-6">colonne A</div>
-        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-6">colonne B</div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          <h1>Pitchfork</h1>
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-6">colonne C</div>
-        <div class="col-12 col-sm-4 col-md-6 col-lg-6 col-xl-6">colonne D</div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-6 col-xl-6">colonne B</div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">colonne C</div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">colonne D</div>
       </div>
 
       <div class="row">
-        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">colonne E</div>
-        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">colonne F</div>
-        <div class="col-6 col-sm-3 col-md-3 col-lg-4 col-xl-3">colonne G</div>
-        <div class="col-6 col-sm-3 col-md-3 col-lg-12 col-xl-3">colonne H</div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+          colonne E
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-6">
+          colonne F
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3">
+          colonne G
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3">
+          colonne H
+        </div>
       </div>
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
