--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
 
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          colonne E
+        <div class="article1">
+          <h2>M.I.A. Scores First No. 1 Song With Travis Scott’s “FRANCHISE”</h2>
+          <divc class="soustext"><p>BY: MATTHEW STRAUSS NEWS / 58 MINS AGO</p></div>
+        </div>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-6">
           colonne F
