--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,13 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap"
       rel="stylesheet"
-    /><link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
-    
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -37,16 +40,36 @@
 
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class="article1">
-          <h2>M.I.A. Scores First No. 1 Song With Travis Scott’s “FRANCHISE”</h2>
-          <divc class="soustext"><p>BY: MATTHEW STRAUSS NEWS / 58 MINS AGO</p></div>
-        </div>
+          <div class="article1">
+            <div class="article1">
+              <h2>
+                M.I.A. Scores First No. 1 Song With Travis Scott’s “FRANCHISE”
+              </h2>
+              <p>BY: MATTHEW STRAUSS
+                NEWS</p>
+              <div class="clair"><p>/ 58 MINS AGO</p></div>
+            </div>
+          </div>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-6">
-          colonne F
+          <div class="article2">
+            <h3>The Ones: Wifigawd’s “Outside”</h3>
+            <p>BY: ALPHONSE PIERRE
+              THE PITCH </p>
+              <div class="clair"><p>/ 6 HRS AGO</p></div>
+            </div>
+          </div>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3">
-          colonne G
+          <div class="article3">
+            <h3>
+              BTS Break Down Their Albums, From DARK & WILD to MAP OF THE SOUL :
+              7 | On the Records
+            </h3>
+            <p>BY: PITCHFORK VIDEO</p>
+              <div class="clair"><p>/ 4 HRS AGO</p></div>
+            </div>
+          </div>
         </div>
         <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-3">
           colonne H
